--- a/Supplementary_Material_IL/requirements.txt
+++ b/Supplementary_Material_IL/requirements.txt
@@ -1,11 +1,27 @@
-accelerate==0.21.0
+# accelerate==0.21.0
+# datasets==2.14.1
+# matplotlib==3.7.2
+# peft==0.4.0
+# adapter-transformers==3.2.1
+# torch==2.0.1
+# tqdm==4.65.0
+# transformers==4.31.0
+# seqeval==1.2.2
+# wandb==0.15.7
+# deepspeed==0.10.1
+numpy==1.26.4
+pyarrow<21
+
+transformers==4.31.0
+adapter-transformers==3.2.1
+peft==0.4.0
+
+torch==2.0.1
+
+accelerate>=0.26.1
 datasets==2.14.1
 matplotlib==3.7.2
-peft==0.4.0
-adapter-transformers==3.2.1
-torch==2.0.1
 tqdm==4.65.0
-transformers==4.31.0
 seqeval==1.2.2
 wandb==0.15.7
 deepspeed==0.10.1
