--- a/Supplementary_Material_IL/requirements.txt
+++ b/Supplementary_Material_IL/requirements.txt
@@ -9,19 +9,82 @@
 # seqeval==1.2.2
 # wandb==0.15.7
 # deepspeed==0.10.1
-numpy==1.26.4
-pyarrow<21
-
-transformers==4.31.0
-adapter-transformers==3.2.1
-peft==0.4.0
-
-torch==2.0.1
-
-accelerate>=0.26.1
+# conda create -n ilvenv python=3.11.10 -y | conda activate ilvenv 
+accelerate==1.11.0
+adapters==1.2.0
+aiohappyeyeballs==2.6.1
+aiohttp==3.13.2
+aiosignal==1.4.0
+appdirs==1.4.4
+attrs==25.4.0
+certifi==2025.10.5
+charset-normalizer==3.4.4
+click==8.3.0
+cmake==4.1.2
+contourpy==1.3.3
+cycler==0.12.1
 datasets==2.14.1
-matplotlib==3.7.2
-tqdm==4.65.0
-seqeval==1.2.2
-wandb==0.15.7
 deepspeed==0.10.1
+dill==0.3.7
+docker-pycreds==0.4.0
+filelock==3.20.0
+fonttools==4.60.1
+frozenlist==1.8.0
+fsspec==2025.10.0
+gitdb==4.0.12
+GitPython==3.1.45
+hf-xet==1.2.0
+hjson==3.1.0
+huggingface-hub==0.36.0
+idna==3.11
+Jinja2==3.1.6
+joblib==1.5.2
+kiwisolver==1.4.9
+lit==18.1.8
+MarkupSafe==3.0.3
+matplotlib==3.7.2
+mpmath==1.3.0
+multidict==6.7.0
+multiprocess==0.70.15
+networkx==3.5
+ninja==1.13.0
+numpy==1.26.4
+packaging==25.0
+pandas==2.3.3
+pathtools==0.1.2
+peft==0.17.1
+pillow==12.0.0
+propcache==0.4.1
+protobuf==4.25.8
+psutil==7.1.3
+py-cpuinfo==9.0.0
+pyarrow==20.0.0
+pydantic==1.10.24
+pyparsing==3.0.9
+python-dateutil==2.9.0.post0
+pytz==2025.2
+PyYAML==6.0.3
+regex==2025.10.23
+requests==2.32.5
+safetensors==0.6.2
+scikit-learn==1.7.2
+scipy==1.16.3
+sentry-sdk==2.43.0
+seqeval==1.2.2
+setproctitle==1.3.7
+six==1.17.0
+smmap==5.0.2
+sympy==1.14.0
+threadpoolctl==3.6.0
+tokenizers==0.21.4
+torch==2.3.1
+tqdm==4.65.0
+transformers==4.51.3
+triton==2.3.1
+typing_extensions==4.15.0
+tzdata==2025.2
+urllib3==2.5.0
+wandb==0.15.7
+xxhash==3.6.0
+yarl==1.22.0
+
